--- a/README.Rmd
+++ b/README.Rmd
@@ -34,5 +34,5 @@ abbrev('Journal of Applied Mathematics')
 
 Or convert a whole .bib file:
 ```{r cache = T}
-bib_shr('refs2.bib')
+bib_shr('inst/refs2.bib')
 ```
