--- a/inst/refs_new.bib
+++ b/inst/refs_new.bib
@@ -219,7 +219,7 @@ article{,
   author={M. W. Beck and R. R. Murphy},
 	year={In press},
 	title={Numerical and qualitative contrasts of two statistical models for water quality change in tidal waters},
-	journal={J. Am. Water Resour. Assocation},
+	journal={J. Am. Water Resour. Assoc.},
 	volume={},
 	number={},
 	pages={}
