--- a/inst/refs_new.bib
+++ b/inst/refs_new.bib
@@ -373,7 +373,7 @@ article{,
 @article{Bergmeir12,
   title = {Neural Networks in {R} Using the Stuttgart Neural Network Simulator: {RSNNS}},
   author = {Christoph Bergmeir and  Jos\'e M. Ben\'itez},
-  journal = {Journal of Statistical Software},
+  journal = {J. Stat. Softw.},
   year = {2012},
   volume = {46},
   number = {7},
